# reallang

./: .env.example  .gitignore  DESIGN_PROMPTS.md  JEJU_ECOSYSTEM_PLAN.md  JEJU_TRAVEL_PLAN.md  LOCAL_PORTS.md  deploy.sh  ecosystem.config.js  package-lock.json  package.json  reallang.md  tsconfig.json
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml  schema.sql
backend/app/: config.py  db.py  main.py
backend/app/api/: chat.py  lessons.py  progress.py
backend/app/models/: pattern.py  progress.py
backend/app/services/: srs.py
backend/crawler/: __init__.py  breakingnews.py  dictionary.py  naver_conversation.py  pipeline.py  tatoeba.py  voa.py
data/: seed_patterns.json
docs/: DATABASE.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
projects/car-pick/: next.config.ts  package.json
projects/car-report/: next.config.ts  package.json
projects/common/: analytics.ts  code-rules.md  supabase-schema.sql  weather-cache.ts
projects/content-studio/: next.config.ts  package.json
projects/creative-sandbox/: middleware.ts  next.config.ts  package.json
projects/cs-chatbot/: next.config.ts  package.json
projects/dashboard/: next.config.ts  package.json
projects/fishing/: PITCH.md  next.config.ts  package.json
projects/images/: cafe-iced-latte-01.avif
projects/jeju-biz/: next.config.ts  package.json
projects/jeju-car/: next.config.ts  package.json
projects/jeju-course-maker/: next.config.ts  package.json
scripts/: auto_deploy.sh  daily_crawl.py  daily_update.sh  deploy.sh  nginx.conf
(+455 files in other folders)
