[tool.poetry]
name = "reallang-backend"
version = "0.1.0"
description = "RealLang Backend API"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
supabase = "^2.11.0"
python-dotenv = "^1.0.1"
httpx = "^0.28.0"
anthropic = "^0.42.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
